create type transaction_type_enum as enum ('expense', 'income');

create table
    "transaction" (
        id int generated by default as identity primary key,
        amount numeric(10, 0) not null,
        description text,
        user_id int not null,
        category_id int not null,
        subcategory_id int,
        created_at timestamp DEFAULT 'now()' NOT NULL,
        updated_at timestamp DEFAULT 'now()' NOT NULL,
        transaction_at timestamp not null,
        deleted_at timestamp,
        transaction_type transaction_type_enum not null
    );

alter table "transaction" add constraint "transaction_user_id_foreign" foreign key ("user_id") references "user_data" ("id") on delete set null;

alter table "transaction" add constraint "transaction_category_id_foreign" foreign key ("category_id") references "category" ("id") on delete set null;

alter table "transaction" add constraint "transaction_subcategory_id_foreign" foreign key ("subcategory_id") references "subcategory" ("id") on delete set null;

-- create index for types
create index "transaction_type_index" on "transaction" ("transaction_type");